--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Trading Academy</title>
 </head>
+    <link rel="stylesheet" href="style.css">
 <body>
     <h1>Välkommen till Trading Academy!</h1>
     <p>Lär dig trading på ett enkelt sätt.</p>
