--- a/tack.html
+++ b/tack.html
@@ -6,6 +6,7 @@
     <title>Tack!</title>
     <link rel="stylesheet" href="style.css">
 </head>
+    <link rel="stylesheet" href="./style.css">
 <body>
     <header>
         <h1>Tack för att du kontaktade oss!</h1>
